--- a/heloo.html
+++ b/heloo.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    huuhuu
+    <h1>HELLO WORLD</h1>
+    <h2>NAMA SAYA FAUZAN</h2>
+    <h2>ini update file html</h2>
 </body>
 </html>
